# sdb

./: .gitignore  CMakeLists.txt  sdb-config.cmake
include/libsdb/: bit.hpp  error.hpp  libsdb.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  types.hpp
include/libsdb/detail/: registers.inc
src/: CMakeLists.txt  libsdb.cpp  pipe.cpp  process.cpp  registers.cpp
test/: tests.cpp
test/targets/: end_immediately.cpp  reg_read.s  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  sdb.cpp
